# minijit

./: CMakeLists.txt  README.md
data/: test.cu
scripts/: bootstrap-cmake-llvm-mingw-cross.sh  bootstrap-linux.sh  build-llvm-clang-cl-wsl.sh  build-llvm-clang-linux.sh  build-llvm-llvm-mingw-cross.sh  build-llvm-native-linux.sh
src/: main.cc
